[gd_scene load_steps=9 format=3 uid="uid://c18gfvh7pwywf"]

[ext_resource type="Script" path="res://Scripts/Enemies/BurstSpitter.gd" id="1_bhrgr"]
[ext_resource type="Script" path="res://Scripts/Util/GunHelper.gd" id="2_7dif5"]
[ext_resource type="AudioStream" uid="uid://dwlgwux6vq5oi" path="res://Audio/Windup.mp3" id="3_ajotg"]
[ext_resource type="AudioStream" uid="uid://c5775e6xbrwci" path="res://Audio/breeze-of-blood-122253.mp3" id="3_c0rwf"]
[ext_resource type="AudioStream" uid="uid://do4nmr1omwjk3" path="res://Audio/BugAttack.mp3" id="4_6hm7t"]

[sub_resource type="Gradient" id="Gradient_gx3yc"]
colors = PackedColorArray(0, 1, 0, 1, 0, 0.849159, 0.47994, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_drnjt"]
gradient = SubResource("Gradient_gx3yc")
width = 16
height = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_3gv5w"]
radius = 8.0

[node name="BurstSpitter" type="CharacterBody2D"]
script = ExtResource("1_bhrgr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_drnjt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3gv5w")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 30.0
target_desired_distance = 30.0
path_postprocessing = 1

[node name="LineOfSight" type="RayCast2D" parent="."]
target_position = Vector2(400, 0)
collision_mask = 3

[node name="SpittingRange" type="RayCast2D" parent="."]
target_position = Vector2(160, 0)
collision_mask = 3

[node name="GunHelper" type="Node2D" parent="."]
script = ExtResource("2_7dif5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="GunHelper"]
stream = ExtResource("3_ajotg")

[node name="AttackPlayer" type="AudioStreamPlayer2D" parent="GunHelper"]
stream = ExtResource("4_6hm7t")

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c0rwf")
